Added react datatale

--- a/FrontEnd1/src/pages/dashboard/Pop.css
+++ b/FrontEnd1/src/pages/dashboard/Pop.css
@@ -18,3 +18,10 @@
   [data-popup='tooltip'].popup-overlay {
     background: transparent;
   }
+
+
+
+.rdt_Pagination{
+  font-size:1.1rem !important;
+}
+  
