--- a/FrontEnd1/src/pages/dashboard/Pop.css
+++ b/FrontEnd1/src/pages/dashboard/Pop.css
@@ -20,8 +20,25 @@
   }
 
 
+.rdt_Table{
+  font-family: serif;
 
-.rdt_Pagination{
-  font-size:1.1rem !important;
 }
-  
+.rdt_Pagination{
+  font-size:.8rem !important;
+}
+  .rdt_TableCell
+  {
+    font-size:1rem !important;
+    font-family: serif;
+    text-transform: capitalize;
+    padding:.7rem;
+  }
+  .rdt_TableHead
+  {
+    font-size: 1rem !important;
+    font-weight: bold !important;
+  }
+  /* .dataTables_wrapper .rdt_TableCell{
+    font-size:25px !important;
+  } */
